@@ -1800,11 +1800,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\link.ico"
+				RelativePath=".\link.ico"
 				>
 			</File>
 			<File
-				RelativePath=".\link.ico"
+				RelativePath="..\Resources\link.ico"
 				>
 			</File>
 			<File
@@ -2508,6 +2508,10 @@
 				</File>
 				<File
 					RelativePath=".\MergeWizard.h"
+					>
+				</File>
+				<File
+					RelativePath=".\MergeWizardBasePage.cpp"
 					>
 				</File>
 				<File
